 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-2797: Tests should not create their own file URIs through string concatenation, should use Util.generateURI instead (jgordon via azaroth)

PIG-2820: relToAbsolutePath is not replayed properly when Grunt reparses the script after PIG-2699 (julien)

PIG-2763: Groovy UDFs (herberts via julien)

PIG-2780: MapReduceLauncher should break early when one of the jobs throws an exception (jay23jack via daijy)

PIG-2804: Remove "PIG" exec type (dvryaboy)

PIG-2726: Handling legitimate NULL values in Cube operator (prasanth_j via dvryaboy)

PIG-2808: Add *.project to .gitignore (azaroth)

PIG-2787: change the module name in ivy to lowercase to match the maven repo (julien)

PIG-2632: Create a SchemaTuple which generates efficient Tuples via code gen (jcoveney)

PIG-2750: add artifacts to the ivy.xml for other jars Pig generates (julien)

PIG-2748: Change the names of the jar produced in the build folder to match maven conventions (julien)

PIG-2770: Allow easy inclusion of custom build targets (julien)

PIG-2697: pretty print schema via pig.pretty.print.schema (rangadi via jcoveney)

PIG-2673: Allow Merge join to follow an ORDER statement (dvryaboy)

PIG-2699: Reduce the number of instances of Load and Store Funcs down to 2+1 (julien)

PIG-2166: UDFs to join a bag (hluu via daijy)

PIG-2651: Provide a much easier to use accumulator interface (jcoveney via daijy)

PIG-2658: Add pig.script.submitted.timestamp and pig.job.submitted.timestamp in generated Map-Reduce job conf (billgraham)

PIG-2735: Add a pig.version.suffix property in build.xml to easily override with a build number (julien)
